// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Nudge Messages matches snapshot 1`] = `
<Memo(NudgeMessage)
  course={
    Object {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "code": "OX-1",
      "current_role_id": 0,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "8d04a686-d5e8-4798-a27d-c608e4d0e187",
      "ecosystem_id": 2,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 2,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": false,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 4,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 11,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 5,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 9,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 6,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 37,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        Object {
          "id": 10,
          "joined_at": "2017-07-21T12:00:00.000Z",
          "period_id": 0,
          "research_identifier": "",
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "should_reuse_preview": false,
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        Object {
          "first_name": "Conor",
          "id": 2,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": false,
          "is_refund_pending": false,
          "last_name": "Torphy",
          "name": "",
          "payment_code": undefined,
          "payment_due_at": "2017-10-17T12:00:00.000Z",
          "period_id": 0,
          "prompt_student_to_pay": false,
          "role_id": 10,
          "student_identifier": "",
          "uuid": "",
        },
      ],
      "teacher_profiles": Array [
        Object {
          "id": 1,
          "name": "Review Teacher 1",
        },
        Object {
          "id": 2,
          "name": "Review Teacher 2",
        },
      ],
      "teachers": Array [],
      "term": "spring",
      "timezone": "US/Central",
      "uses_pre_wrm_scores": false,
      "uuid": "fae53847-84e4-4f94-b98c-56abd229fd5f",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    Object {
      "answer_id": undefined,
      "attempt_number": 0,
      "attempts_remaining": 2,
      "available_points": 1,
      "can_be_updated": true,
      "correct_answer_id": 0,
      "dropped_method": "",
      "exercise_id": 1,
      "external_url": null,
      "feedback_html": "",
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": "",
      "group": "",
      "id": 1,
      "is_completed": false,
      "is_feedback_available": false,
      "labels": undefined,
      "last_completed_at": "1970-01-01T00:00:00.000Z",
      "preview": "sexy: Angiosperms",
      "published_comments": "",
      "published_late_work_point_penalty": null,
      "published_points": null,
      "published_points_without_lateness": null,
      "response_validation": Object {},
      "spy": Object {},
      "tasked_id": 0,
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "cancelWRQResubmit": [MockFunction],
      "displayNudgeError": true,
      "onSave": [MockFunction],
      "recordFinalResponse": [MockFunction],
      "recordResult": [MockFunction],
      "setResponse": [MockFunction],
      "submitOriginalResponse": [MockFunction],
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 2`] = `
<Memo(NudgeMessage)
  course={
    Object {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "code": "OX-1",
      "current_role_id": 0,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "8d04a686-d5e8-4798-a27d-c608e4d0e187",
      "ecosystem_id": 2,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 2,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": false,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 4,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 11,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 5,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 9,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 6,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 37,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        Object {
          "id": 10,
          "joined_at": "2017-07-21T12:00:00.000Z",
          "period_id": 0,
          "research_identifier": "",
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "should_reuse_preview": false,
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        Object {
          "first_name": "Conor",
          "id": 2,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": false,
          "is_refund_pending": false,
          "last_name": "Torphy",
          "name": "",
          "payment_code": undefined,
          "payment_due_at": "2017-10-17T12:00:00.000Z",
          "period_id": 0,
          "prompt_student_to_pay": false,
          "role_id": 10,
          "student_identifier": "",
          "uuid": "",
        },
      ],
      "teacher_profiles": Array [
        Object {
          "id": 1,
          "name": "Review Teacher 1",
        },
        Object {
          "id": 2,
          "name": "Review Teacher 2",
        },
      ],
      "teachers": Array [],
      "term": "spring",
      "timezone": "US/Central",
      "uses_pre_wrm_scores": false,
      "uuid": "fae53847-84e4-4f94-b98c-56abd229fd5f",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    Object {
      "answer_id": undefined,
      "attempt_number": 0,
      "attempts_remaining": 2,
      "available_points": 1,
      "can_be_updated": true,
      "correct_answer_id": 0,
      "dropped_method": "",
      "exercise_id": 1,
      "external_url": null,
      "feedback_html": "",
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": "",
      "group": "",
      "id": 1,
      "is_completed": false,
      "is_feedback_available": false,
      "labels": undefined,
      "last_completed_at": "1970-01-01T00:00:00.000Z",
      "preview": "sexy: Angiosperms",
      "published_comments": "",
      "published_late_work_point_penalty": null,
      "published_points": null,
      "published_points_without_lateness": null,
      "response_validation": Object {},
      "spy": Object {},
      "tasked_id": 0,
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "cancelWRQResubmit": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Take another chance",
      },
      "onSave": [MockFunction],
      "recordFinalResponse": [MockFunction],
      "recordResult": [MockFunction],
      "setResponse": [MockFunction],
      "submitOriginalResponse": [MockFunction],
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 3`] = `
<Memo(NudgeMessage)
  course={
    Object {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "code": "OX-1",
      "current_role_id": 0,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "8d04a686-d5e8-4798-a27d-c608e4d0e187",
      "ecosystem_id": 2,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 2,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": false,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 4,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 11,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 5,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 9,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 6,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 37,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        Object {
          "id": 10,
          "joined_at": "2017-07-21T12:00:00.000Z",
          "period_id": 0,
          "research_identifier": "",
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "should_reuse_preview": false,
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        Object {
          "first_name": "Conor",
          "id": 2,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": false,
          "is_refund_pending": false,
          "last_name": "Torphy",
          "name": "",
          "payment_code": undefined,
          "payment_due_at": "2017-10-17T12:00:00.000Z",
          "period_id": 0,
          "prompt_student_to_pay": false,
          "role_id": 10,
          "student_identifier": "",
          "uuid": "",
        },
      ],
      "teacher_profiles": Array [
        Object {
          "id": 1,
          "name": "Review Teacher 1",
        },
        Object {
          "id": 2,
          "name": "Review Teacher 2",
        },
      ],
      "teachers": Array [],
      "term": "spring",
      "timezone": "US/Central",
      "uses_pre_wrm_scores": false,
      "uuid": "fae53847-84e4-4f94-b98c-56abd229fd5f",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    Object {
      "answer_id": undefined,
      "attempt_number": 0,
      "attempts_remaining": 2,
      "available_points": 1,
      "can_be_updated": true,
      "correct_answer_id": 0,
      "dropped_method": "",
      "exercise_id": 1,
      "external_url": null,
      "feedback_html": "",
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": "",
      "group": "",
      "id": 1,
      "is_completed": false,
      "is_feedback_available": false,
      "labels": undefined,
      "last_completed_at": "1970-01-01T00:00:00.000Z",
      "preview": "sexy: Angiosperms",
      "published_comments": "",
      "published_late_work_point_penalty": null,
      "published_points": null,
      "published_points_without_lateness": null,
      "response_validation": Object {},
      "spy": Object {},
      "tasked_id": 0,
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "cancelWRQResubmit": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Not sure? Here’s a hint",
      },
      "onSave": [MockFunction],
      "recordFinalResponse": [MockFunction],
      "recordResult": [MockFunction],
      "setResponse": [MockFunction],
      "submitOriginalResponse": [MockFunction],
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 4`] = `
<Memo(NudgeMessage)
  course={
    Object {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "code": "OX-1",
      "current_role_id": 0,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "8d04a686-d5e8-4798-a27d-c608e4d0e187",
      "ecosystem_id": 2,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 2,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": false,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 4,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 11,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 5,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 9,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 6,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 37,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        Object {
          "id": 10,
          "joined_at": "2017-07-21T12:00:00.000Z",
          "period_id": 0,
          "research_identifier": "",
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "should_reuse_preview": false,
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        Object {
          "first_name": "Conor",
          "id": 2,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": false,
          "is_refund_pending": false,
          "last_name": "Torphy",
          "name": "",
          "payment_code": undefined,
          "payment_due_at": "2017-10-17T12:00:00.000Z",
          "period_id": 0,
          "prompt_student_to_pay": false,
          "role_id": 10,
          "student_identifier": "",
          "uuid": "",
        },
      ],
      "teacher_profiles": Array [
        Object {
          "id": 1,
          "name": "Review Teacher 1",
        },
        Object {
          "id": 2,
          "name": "Review Teacher 2",
        },
      ],
      "teachers": Array [],
      "term": "spring",
      "timezone": "US/Central",
      "uses_pre_wrm_scores": false,
      "uuid": "fae53847-84e4-4f94-b98c-56abd229fd5f",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    Object {
      "answer_id": undefined,
      "attempt_number": 0,
      "attempts_remaining": 2,
      "available_points": 1,
      "can_be_updated": true,
      "correct_answer_id": 0,
      "dropped_method": "",
      "exercise_id": 1,
      "external_url": null,
      "feedback_html": "",
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": "",
      "group": "",
      "id": 1,
      "is_completed": false,
      "is_feedback_available": false,
      "labels": undefined,
      "last_completed_at": "1970-01-01T00:00:00.000Z",
      "preview": "sexy: Angiosperms",
      "published_comments": "",
      "published_late_work_point_penalty": null,
      "published_points": null,
      "published_points_without_lateness": null,
      "response_validation": Object {},
      "spy": Object {},
      "tasked_id": 0,
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "cancelWRQResubmit": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Try again",
      },
      "onSave": [MockFunction],
      "recordFinalResponse": [MockFunction],
      "recordResult": [MockFunction],
      "setResponse": [MockFunction],
      "submitOriginalResponse": [MockFunction],
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 5`] = `
<Memo(NudgeMessage)
  course={
    Object {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "code": "OX-1",
      "current_role_id": 0,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "8d04a686-d5e8-4798-a27d-c608e4d0e187",
      "ecosystem_id": 2,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 2,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": false,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 4,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 11,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 5,
          "is_archived": false,
          "name": "2nd",
          "num_enrolled_students": 9,
        },
        Object {
          "enrollment_code": "78629",
          "enrollment_url": "http://localhost:3001/enroll/78629",
          "id": 6,
          "is_archived": false,
          "name": "3rd",
          "num_enrolled_students": 37,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        Object {
          "id": 10,
          "joined_at": "2017-07-21T12:00:00.000Z",
          "period_id": 0,
          "research_identifier": "",
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "should_reuse_preview": false,
      "starts_at": "2017-07-14T12:00:00.000Z",
      "students": Array [
        Object {
          "first_name": "Conor",
          "id": 2,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": false,
          "is_refund_pending": false,
          "last_name": "Torphy",
          "name": "",
          "payment_code": undefined,
          "payment_due_at": "2017-10-17T12:00:00.000Z",
          "period_id": 0,
          "prompt_student_to_pay": false,
          "role_id": 10,
          "student_identifier": "",
          "uuid": "",
        },
      ],
      "teacher_profiles": Array [
        Object {
          "id": 1,
          "name": "Review Teacher 1",
        },
        Object {
          "id": 2,
          "name": "Review Teacher 2",
        },
      ],
      "teachers": Array [],
      "term": "spring",
      "timezone": "US/Central",
      "uses_pre_wrm_scores": false,
      "uuid": "fae53847-84e4-4f94-b98c-56abd229fd5f",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    Object {
      "answer_id": undefined,
      "attempt_number": 0,
      "attempts_remaining": 2,
      "available_points": 1,
      "can_be_updated": true,
      "correct_answer_id": 0,
      "dropped_method": "",
      "exercise_id": 1,
      "external_url": null,
      "feedback_html": "",
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": "",
      "group": "",
      "id": 1,
      "is_completed": false,
      "is_feedback_available": false,
      "labels": undefined,
      "last_completed_at": "1970-01-01T00:00:00.000Z",
      "preview": "sexy: Angiosperms",
      "published_comments": "",
      "published_late_work_point_penalty": null,
      "published_points": null,
      "published_points_without_lateness": null,
      "response_validation": Object {},
      "spy": Object {},
      "tasked_id": 0,
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "cancelWRQResubmit": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Give it another shot",
      },
      "onSave": [MockFunction],
      "recordFinalResponse": [MockFunction],
      "recordResult": [MockFunction],
      "setResponse": [MockFunction],
      "submitOriginalResponse": [MockFunction],
      "validate": [MockFunction],
    }
  }
/>
`;
